deploy: a081c8dd8a88b59b6a9b39d86ee8faa8796a5f0a

--- a/_notebooks/aiyagari.ipynb
+++ b/_notebooks/aiyagari.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "c95a2f58",
+   "id": "eb1e9688",
    "metadata": {},
    "source": [
     "\n",
@@ -11,7 +11,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "1d1382a8",
+   "id": "26842e09",
    "metadata": {},
    "source": [
     "# The Aiyagari Model"
@@ -19,7 +19,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "72265db7",
+   "id": "85dafc20",
    "metadata": {},
    "source": [
     "## Contents\n",
@@ -33,7 +33,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "68c5ec40",
+   "id": "5e6724cf",
    "metadata": {},
    "source": [
     "In addition to what’s in Anaconda, this lecture will need the following libraries:"
@@ -42,7 +42,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "27de38ff",
+   "id": "fd01d2a8",
    "metadata": {
     "hide-output": false
    },
@@ -53,7 +53,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "ce08a1a3",
+   "id": "92209559",
    "metadata": {},
    "source": [
     "## Overview\n",
@@ -83,7 +83,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "b04493f1",
+   "id": "57b3b285",
    "metadata": {
     "hide-output": false
    },
@@ -98,7 +98,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "7e24b26d",
+   "id": "3a0a233a",
    "metadata": {},
    "source": [
     "### References\n",
@@ -112,7 +112,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "ef59596a",
+   "id": "a7d2d730",
    "metadata": {},
    "source": [
     "## The Economy"
@@ -120,7 +120,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "86eed3b8",
+   "id": "ba846589",
    "metadata": {},
    "source": [
     "### Households\n",
@@ -164,7 +164,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "76dc669b",
+   "id": "c1b988d3",
    "metadata": {},
    "source": [
     "## Firms\n",
@@ -218,7 +218,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "65d34f03",
+   "id": "972064e7",
    "metadata": {},
    "source": [
     "### Equilibrium\n",
@@ -252,7 +252,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "bbbe943b",
+   "id": "dd046dab",
    "metadata": {},
    "source": [
     "## Code\n",
@@ -287,7 +287,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "70c42a33",
+   "id": "c6513609",
    "metadata": {
     "hide-output": false
    },
@@ -402,7 +402,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "608ffc76",
+   "id": "0ae8412a",
    "metadata": {},
    "source": [
     "As a first example of what we can do, let’s compute and plot an optimal accumulation policy at fixed prices."
@@ -411,7 +411,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "2d9f4dc8",
+   "id": "ded1b4aa",
    "metadata": {
     "hide-output": false
    },
@@ -456,7 +456,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "86fd1670",
+   "id": "4d8ab866",
    "metadata": {},
    "source": [
     "The plot shows asset accumulation policies at different values of the exogenous state.\n",
@@ -473,7 +473,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "242be293",
+   "id": "b8ada102",
    "metadata": {
     "hide-output": false
    },
@@ -554,7 +554,7 @@
   }
  ],
  "metadata": {
-  "date": 1706585843.715129,
+  "date": 1706657885.4756126,
   "filename": "aiyagari.md",
   "kernelspec": {
    "display_name": "Python",
