--- a/_notebooks/cass_koopmans_1.ipynb
+++ b/_notebooks/cass_koopmans_1.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "76288ba3",
+   "id": "1201f254",
    "metadata": {},
    "source": [
     "\n",
@@ -11,7 +11,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "35913c1c",
+   "id": "d8baa1d2",
    "metadata": {},
    "source": [
     "# Cass-Koopmans Model"
@@ -19,7 +19,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "316b59fe",
+   "id": "d0410499",
    "metadata": {},
    "source": [
     "## Contents\n",
@@ -37,7 +37,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "e40f552a",
+   "id": "7fc2d2c7",
    "metadata": {},
    "source": [
     "## Overview\n",
@@ -87,7 +87,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "5911688d",
+   "id": "aa9424d6",
    "metadata": {
     "hide-output": false
    },
@@ -102,7 +102,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "89c8c87c",
+   "id": "070aaa01",
    "metadata": {},
    "source": [
     "## The Model\n",
@@ -128,7 +128,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "c55c8093",
+   "id": "101c0e8f",
    "metadata": {},
    "source": [
     "### Digression: Aggregation Theory\n",
@@ -187,7 +187,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "db5db471",
+   "id": "5636c5a4",
    "metadata": {},
    "source": [
     "#### An  Economy\n",
@@ -254,7 +254,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "81e0c21e",
+   "id": "4575abb0",
    "metadata": {},
    "source": [
     "## Planning Problem\n",
@@ -297,7 +297,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "5cf3dfae",
+   "id": "37834eeb",
    "metadata": {},
    "source": [
     "### Useful Properties of Linearly Homogeneous Production Function\n",
@@ -356,7 +356,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "2dbd6312",
+   "id": "cca836b8",
    "metadata": {},
    "source": [
     "### First-order necessary conditions\n",
@@ -455,7 +455,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "c5d49e93",
+   "id": "3d9c2d2d",
    "metadata": {
     "hide-output": false
    },
@@ -473,7 +473,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "8bb5a1dd",
+   "id": "419ea0e6",
    "metadata": {
     "hide-output": false
    },
@@ -546,7 +546,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "bc4c23f4",
+   "id": "b71383c4",
    "metadata": {},
    "source": [
     "We can construct an economy with the Python code:"
@@ -555,7 +555,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "98185131",
+   "id": "2f9839d1",
    "metadata": {
     "hide-output": false
    },
@@ -566,7 +566,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "072896ed",
+   "id": "f84f9fd9",
    "metadata": {},
    "source": [
     "## Shooting Algorithm\n",
@@ -633,7 +633,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "51ac4ee4",
+   "id": "d4f88c44",
    "metadata": {
     "hide-output": false
    },
@@ -668,7 +668,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "ba7d52cc",
+   "id": "915a818f",
    "metadata": {},
    "source": [
     "We’ll start with an incorrect guess."
@@ -677,7 +677,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "e25714cd",
+   "id": "e45de29e",
    "metadata": {
     "hide-output": false
    },
@@ -689,7 +689,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "8512285e",
+   "id": "d71b5287",
    "metadata": {
     "hide-output": false
    },
@@ -714,7 +714,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "e5fefd19",
+   "id": "09b7f83d",
    "metadata": {},
    "source": [
     "Evidently, our initial guess for $ \\mu_0 $ is too high, so\n",
@@ -754,7 +754,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "8c6c0425",
+   "id": "8daf070a",
    "metadata": {
     "hide-output": false
    },
@@ -796,7 +796,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "12d794bf",
+   "id": "a0862872",
    "metadata": {
     "hide-output": false
    },
@@ -835,7 +835,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "730fddf1",
+   "id": "34392873",
    "metadata": {},
    "source": [
     "Now we can solve the model and plot the paths of consumption, capital, and Lagrange multiplier."
@@ -844,7 +844,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "65051cd7",
+   "id": "2a631506",
    "metadata": {
     "hide-output": false
    },
@@ -855,7 +855,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "e8ddba83",
+   "id": "36c8ef67",
    "metadata": {},
    "source": [
     "## Setting Initial Capital to Steady State Capital\n",
@@ -923,7 +923,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "29957d94",
+   "id": "8990ac5d",
    "metadata": {
     "hide-output": false
    },
@@ -937,7 +937,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "1ad62af7",
+   "id": "6df20e56",
    "metadata": {},
    "source": [
     "Now we plot"
@@ -946,7 +946,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "e0d9ea04",
+   "id": "b5850c8c",
    "metadata": {
     "hide-output": false
    },
@@ -957,7 +957,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "37d46ec7",
+   "id": "b8bf3757",
    "metadata": {},
    "source": [
     "Evidently,  with a large value of\n",
@@ -970,7 +970,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "e63b5ff0",
+   "id": "8d901e68",
    "metadata": {
     "hide-output": false
    },
@@ -981,7 +981,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "9b2f7cf0",
+   "id": "f661b7c7",
    "metadata": {},
    "source": [
     "Notice how the planner pushes capital toward the steady state, stays\n",
@@ -994,7 +994,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "8739b9f6",
+   "id": "e95de391",
    "metadata": {
     "hide-output": false
    },
@@ -1005,7 +1005,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "e92a528d",
+   "id": "6e54649b",
    "metadata": {},
    "source": [
     "## A Turnpike Property\n",
@@ -1018,7 +1018,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "62b04983",
+   "id": "b10ebbb8",
    "metadata": {
     "hide-output": false
    },
@@ -1029,7 +1029,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "57716bec",
+   "id": "9df3c220",
    "metadata": {},
    "source": [
     "In the above graphs, different colors  are associated with\n",
@@ -1055,7 +1055,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "0d01141c",
+   "id": "41116c88",
    "metadata": {
     "hide-output": false
    },
@@ -1072,7 +1072,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "7de3e98c",
+   "id": "c6d2c9b7",
    "metadata": {
     "hide-output": false
    },
@@ -1097,7 +1097,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "40c3f28e",
+   "id": "36b79c2a",
    "metadata": {
     "hide-output": false
    },
@@ -1108,7 +1108,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "d82d3237",
+   "id": "2307d618",
    "metadata": {},
    "source": [
     "## A Limiting Infinite Horizon Economy\n",
@@ -1151,7 +1151,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "a599d249",
+   "id": "6399996e",
    "metadata": {
     "hide-output": false
    },
@@ -1165,7 +1165,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "ce892af6",
+   "id": "ec000563",
    "metadata": {},
    "source": [
     "Since $ K_0<\\bar K $, $ f'(K_0)>\\rho +\\delta $.\n",
@@ -1181,7 +1181,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "0ba40f29",
+   "id": "f07ac68a",
    "metadata": {},
    "source": [
     "### Exercise"
@@ -1189,7 +1189,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "0f73fb01",
+   "id": "59c62923",
    "metadata": {},
    "source": [
     "### Exercise 8.1\n",
@@ -1202,7 +1202,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "b42b0e16",
+   "id": "ec375ffe",
    "metadata": {},
    "source": [
     "### Solution to[ Exercise 8.1](https://eqm.quantecon.org/#ck1_ex1)"
@@ -1211,7 +1211,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "18c316e5",
+   "id": "f555ed70",
    "metadata": {
     "hide-output": false
    },
@@ -1222,7 +1222,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "86fa2ad4",
+   "id": "29467808",
    "metadata": {},
    "source": [
     "## Concluding Remarks\n",
@@ -1243,7 +1243,7 @@
   }
  ],
  "metadata": {
-  "date": 1706585843.787095,
+  "date": 1706657885.5476081,
   "filename": "cass_koopmans_1.md",
   "kernelspec": {
    "display_name": "Python",
