--- a/_notebooks/cass_koopmans_2.ipynb
+++ b/_notebooks/cass_koopmans_2.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "1189292d",
+   "id": "9f058436",
    "metadata": {},
    "source": [
     "\n",
@@ -11,7 +11,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "282825a2",
+   "id": "52bda6a9",
    "metadata": {},
    "source": [
     "# Cass-Koopmans Competitive Equilibrium"
@@ -19,7 +19,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "6a9173be",
+   "id": "5141e43f",
    "metadata": {},
    "source": [
     "## Contents\n",
@@ -37,7 +37,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "bd8ea311",
+   "id": "b2992f24",
    "metadata": {},
    "source": [
     "## Overview\n",
@@ -87,7 +87,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "5121809a",
+   "id": "355e16d0",
    "metadata": {
     "hide-output": false
    },
@@ -102,7 +102,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "9cff4a09",
+   "id": "28b9e204",
    "metadata": {},
    "source": [
     "## Review of Cass-Koopmans Model\n",
@@ -160,7 +160,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "bba105aa",
+   "id": "13f41516",
    "metadata": {},
    "source": [
     "### Planning Problem\n",
@@ -173,7 +173,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "19e00cc7",
+   "id": "2943c93d",
    "metadata": {},
    "source": [
     "## Competitive Equilibrium\n",
@@ -226,7 +226,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "1194e42a",
+   "id": "04738d85",
    "metadata": {},
    "source": [
     "## Market Structure\n",
@@ -244,7 +244,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "2ebee1ed",
+   "id": "83d91679",
    "metadata": {},
    "source": [
     "### Prices\n",
@@ -278,7 +278,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "f7b96b8d",
+   "id": "60102169",
    "metadata": {},
    "source": [
     "## Firm Problem\n",
@@ -304,7 +304,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "8b1aa0bc",
+   "id": "0a0ed59a",
    "metadata": {},
    "source": [
     "### Zero Profit Conditions\n",
@@ -387,7 +387,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "c6194bcd",
+   "id": "bfa44be0",
    "metadata": {},
    "source": [
     "## Household Problem\n",
@@ -457,7 +457,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "918f7cbb",
+   "id": "fdbb8751",
    "metadata": {},
    "source": [
     "### Definitions\n",
@@ -481,7 +481,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "67ba78ca",
+   "id": "7eb8f96b",
    "metadata": {},
    "source": [
     "## Computing a Competitive Equilibrium\n",
@@ -497,7 +497,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "80aed7c0",
+   "id": "f4e6803a",
    "metadata": {},
    "source": [
     "### Guess for Price System\n",
@@ -590,7 +590,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "ca0872ed",
+   "id": "6f46a7d4",
    "metadata": {},
    "source": [
     "### Verification Procedure\n",
@@ -605,7 +605,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "f384d639",
+   "id": "68babe30",
    "metadata": {},
    "source": [
     "### Household’s Lagrangian\n",
@@ -727,7 +727,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "cf2e7e96",
+   "id": "58bc5cca",
    "metadata": {},
    "source": [
     "### Representative Firm’s Problem\n",
@@ -783,7 +783,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "63f08663",
+   "id": "873f701e",
    "metadata": {
     "hide-output": false
    },
@@ -801,7 +801,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "db91da17",
+   "id": "a4072cfc",
    "metadata": {
     "hide-output": false
    },
@@ -875,7 +875,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "c834eb8e",
+   "id": "8fcaf10d",
    "metadata": {
     "hide-output": false
    },
@@ -911,7 +911,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "c14067d5",
+   "id": "ce30ab8d",
    "metadata": {
     "hide-output": false
    },
@@ -953,7 +953,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "c8cf6810",
+   "id": "b2a3a585",
    "metadata": {
     "hide-output": false
    },
@@ -969,7 +969,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "9a814288",
+   "id": "a8d935ef",
    "metadata": {},
    "source": [
     "The above code from this lecture [Cass-Koopmans Planning Model](https://eqm.quantecon.org/cass_koopmans_1.html) lets us compute an optimal allocation for the planning problem.\n",
@@ -983,7 +983,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "32598602",
+   "id": "d0738307",
    "metadata": {
     "hide-output": false
    },
@@ -1012,7 +1012,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "1e163ca0",
+   "id": "72bb11ab",
    "metadata": {},
    "source": [
     "Now we calculate and plot for each $ T $"
@@ -1021,7 +1021,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "60e68e98",
+   "id": "6216bba3",
    "metadata": {
     "hide-output": false
    },
@@ -1057,7 +1057,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "127280b7",
+   "id": "68c75d13",
    "metadata": {},
    "source": [
     "#### Varying Curvature\n",
@@ -1072,7 +1072,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "5be380f7",
+   "id": "70d6e380",
    "metadata": {
     "hide-output": false
    },
@@ -1108,7 +1108,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "1d255f79",
+   "id": "77564bf1",
    "metadata": {},
    "source": [
     "Adjusting $ \\gamma $ means adjusting how much individuals prefer\n",
@@ -1123,7 +1123,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "b8b7ddd2",
+   "id": "921104f1",
    "metadata": {},
    "source": [
     "## Yield Curves and Hicks-Arrow Prices\n",
@@ -1156,7 +1156,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "c405c396",
+   "id": "e11ea892",
    "metadata": {
     "hide-output": false
    },
@@ -1200,7 +1200,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "7b2af7c1",
+   "id": "e937bd23",
    "metadata": {
     "hide-output": false
    },
@@ -1212,7 +1212,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "243d1d67",
+   "id": "5b0ad273",
    "metadata": {},
    "source": [
     "Now we plot when $ t_0=20 $"
@@ -1221,7 +1221,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "27c1201e",
+   "id": "c6fac096",
    "metadata": {
     "hide-output": false
    },
@@ -1232,7 +1232,7 @@
   }
  ],
  "metadata": {
-  "date": 1706585843.828417,
+  "date": 1706657885.5876908,
   "filename": "cass_koopmans_2.md",
   "kernelspec": {
    "display_name": "Python",
