--- a/_notebooks/rational_expectations.ipynb
+++ b/_notebooks/rational_expectations.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "142d2769",
+   "id": "a7badb03",
    "metadata": {},
    "source": [
     "\n",
@@ -11,7 +11,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "65d1b180",
+   "id": "a3ab03d5",
    "metadata": {},
    "source": [
     "# Rational Expectations Equilibrium"
@@ -19,7 +19,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "cf2f9118",
+   "id": "a1dbb775",
    "metadata": {},
    "source": [
     "## Contents\n",
@@ -33,7 +33,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "5199cb97",
+   "id": "50f3209a",
    "metadata": {},
    "source": [
     "> “If you’re so smart, why aren’t you rich?”\n",
@@ -45,7 +45,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "cc4d3b39",
+   "id": "7488704c",
    "metadata": {
     "hide-output": false
    },
@@ -56,7 +56,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "0c3e9763",
+   "id": "099854be",
    "metadata": {},
    "source": [
     "## Overview\n",
@@ -70,7 +70,7 @@
     "\n",
     "We follow Lucas and Prescott by employing a setting that is readily “Bellmanized” (i.e., susceptible to  being formulated as a dynamic programming problems.\n",
     "\n",
-    "Because we use linear quadratic setups for demand and costs, we can deploy the LQ programming techniques described in [this lecture](https://quantecon.github.io/lecture-dle/lqcontrol.html).\n",
+    "Because we use linear quadratic setups for demand and costs, we can deploy the LQ programming techniques described in [this lecture](https://dle.quantecon.org/lqcontrol.html).\n",
     "\n",
     "We will learn about how a representative agent’s problem differs from a planner’s, and how a planning problem can be used to compute  quantities and prices in a rational expectations\n",
     "equilibrium.\n",
@@ -93,7 +93,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "dd215217",
+   "id": "02d97b9a",
    "metadata": {
     "hide-output": false
    },
@@ -106,7 +106,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "a67307b5",
+   "id": "3d32d6fb",
    "metadata": {},
    "source": [
     "We’ll also use the LQ class from `QuantEcon.py`."
@@ -115,7 +115,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "0f8abd20",
+   "id": "ce4917c7",
    "metadata": {
     "hide-output": false
    },
@@ -126,7 +126,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "1c55af76",
+   "id": "11fba24e",
    "metadata": {},
    "source": [
     "### The Big Y, little y Trick\n",
@@ -164,7 +164,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "b1f87721",
+   "id": "7119b11a",
    "metadata": {},
    "source": [
     "#### A Simple Static Example of the Big Y, little y Trick\n",
@@ -239,7 +239,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "d810260a",
+   "id": "28ef0d41",
    "metadata": {},
    "source": [
     "### Related Planning Problem\n",
@@ -271,7 +271,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "d9f4d5c0",
+   "id": "070b58a1",
    "metadata": {},
    "source": [
     "### Further Reading\n",
@@ -285,7 +285,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "43def699",
+   "id": "d078f525",
    "metadata": {},
    "source": [
     "## Rational Expectations Equilibrium\n",
@@ -313,7 +313,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "33490b3f",
+   "id": "43ca314c",
    "metadata": {},
    "source": [
     "### Competitive Equilibrium with Adjustment Costs\n",
@@ -344,7 +344,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "78fa5c0d",
+   "id": "57356161",
    "metadata": {},
    "source": [
     "#### The Firm’s Problem\n",
@@ -387,7 +387,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "5e81d5f8",
+   "id": "1ab6945c",
    "metadata": {},
    "source": [
     "#### Prices and Aggregate Output\n",
@@ -403,7 +403,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "4d3a15b5",
+   "id": "3004cf28",
    "metadata": {},
    "source": [
     "#### Representative Firm’s Beliefs\n",
@@ -423,7 +423,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "833cf588",
+   "id": "ae1cc378",
    "metadata": {},
    "source": [
     "#### Optimal Behavior Given Beliefs\n",
@@ -462,7 +462,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "b3bafd76",
+   "id": "a4592340",
    "metadata": {},
    "source": [
     "#### Characterization with First-Order Necessary Conditions\n",
@@ -509,7 +509,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "79ec402c",
+   "id": "630bf489",
    "metadata": {},
    "source": [
     "#### The Actual Law of Motion for Output\n",
@@ -532,7 +532,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "aed8df31",
+   "id": "2ee53e3b",
    "metadata": {},
    "source": [
     "### Definition of Rational Expectations Equilibrium\n",
@@ -549,7 +549,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "3d70c7c4",
+   "id": "4a9e8704",
    "metadata": {},
    "source": [
     "#### Fixed Point Characterization\n",
@@ -563,7 +563,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "5c09403f",
+   "id": "11c2528b",
    "metadata": {},
    "source": [
     "## Computing  an Equilibrium\n",
@@ -575,7 +575,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "eb1200a0",
+   "id": "5b4d787b",
    "metadata": {},
    "source": [
     "### Failure of Contractivity\n",
@@ -603,7 +603,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "4f0bb220",
+   "id": "ec05e8ad",
    "metadata": {},
    "source": [
     "### A Planning Problem Approach\n",
@@ -612,7 +612,7 @@
     "<a id='index-4'></a>\n",
     "Our plan of attack is to match the Euler equations of the market problem with those for a  single-agent choice problem.\n",
     "\n",
-    "As we’ll see, this planning problem can be solved by LQ control ([linear regulator](https://quantecon.github.io/lecture-dle/lqcontrol.html)).\n",
+    "As we’ll see, this planning problem can be solved by LQ control ([linear regulator](https://dle.quantecon.org/lqcontrol.html)).\n",
     "\n",
     "Optimal quantities from the planning problem are rational expectations equilibrium quantities.\n",
     "\n",
@@ -640,7 +640,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "42b92059",
+   "id": "9d42ec68",
    "metadata": {},
    "source": [
     "### Solution of  Planning Problem\n",
@@ -683,7 +683,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "151519d2",
+   "id": "33a15235",
    "metadata": {},
    "source": [
     "### Key Insight\n",
@@ -709,7 +709,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "bc737488",
+   "id": "4d0bf690",
    "metadata": {},
    "source": [
     "#### Structure of the Law of Motion\n",
@@ -746,7 +746,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "bcc7c9e5",
+   "id": "2bffb57a",
    "metadata": {},
    "source": [
     "## Exercises"
@@ -754,7 +754,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "a117cda3",
+   "id": "eb1a27b2",
    "metadata": {},
    "source": [
     "## Exercise 10.1\n",
@@ -778,7 +778,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "93a2a10d",
+   "id": "e4b50010",
    "metadata": {},
    "source": [
     "## Solution to[ Exercise 10.1](https://eqm.quantecon.org/#ree_ex1)\n",
@@ -850,7 +850,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "e58ce98a",
+   "id": "5caa48b8",
    "metadata": {
     "hide-output": false
    },
@@ -891,7 +891,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "e0a1b983",
+   "id": "17681392",
    "metadata": {},
    "source": [
     "The implication is that\n",
@@ -912,7 +912,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "c030cca5",
+   "id": "204a097e",
    "metadata": {},
    "source": [
     "## Exercise 10.2\n",
@@ -936,7 +936,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "a89a9b7f",
+   "id": "90b8d8eb",
    "metadata": {},
    "source": [
     "## Solution to[ Exercise 10.2](https://eqm.quantecon.org/#ree_ex2)\n",
@@ -968,7 +968,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "8589bae4",
+   "id": "68a4f3d3",
    "metadata": {
     "hide-output": false
    },
@@ -998,7 +998,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "0832b972",
+   "id": "8839ee89",
    "metadata": {},
    "source": [
     "The output tells us that the answer is pair (iii), which implies\n",
@@ -1020,7 +1020,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "7cde8a8f",
+   "id": "641089f9",
    "metadata": {},
    "source": [
     "## Exercise 10.3\n",
@@ -1036,7 +1036,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "f2c1d7f8",
+   "id": "7fb9531d",
    "metadata": {},
    "source": [
     "## Solution to[ Exercise 10.3](https://eqm.quantecon.org/#ree_ex3)\n",
@@ -1084,7 +1084,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "e57dbed2",
+   "id": "2f472409",
    "metadata": {
     "hide-output": false
    },
@@ -1111,7 +1111,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "18ffdf9c",
+   "id": "571abe25",
    "metadata": {},
    "source": [
     "The output yields the same $ (\\kappa_0, \\kappa_1) $ pair obtained as\n",
@@ -1120,7 +1120,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "427e0404",
+   "id": "a17a79c8",
    "metadata": {},
    "source": [
     "## Exercise 10.4\n",
@@ -1146,7 +1146,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "7dd39395",
+   "id": "ce459279",
    "metadata": {},
    "source": [
     "## Solution to[ Exercise 10.4](https://eqm.quantecon.org/#ree_ex4)\n",
@@ -1167,7 +1167,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "5c511b17",
+   "id": "8dae9885",
    "metadata": {
     "hide-output": false
    },
@@ -1188,7 +1188,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "ca9adec8",
+   "id": "9dbd1a36",
    "metadata": {},
    "source": [
     "We see that the law of motion for the monopolist is approximately\n",
@@ -1222,7 +1222,7 @@
   }
  ],
  "metadata": {
-  "date": 1706585844.3995168,
+  "date": 1706657886.150385,
   "filename": "rational_expectations.md",
   "kernelspec": {
    "display_name": "Python",
