--- a/_notebooks/coase.ipynb
+++ b/_notebooks/coase.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "a35a30be",
+   "id": "93112ab8",
    "metadata": {},
    "source": [
     "\n",
@@ -11,7 +11,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "b07c8bac",
+   "id": "a26047dc",
    "metadata": {},
    "source": [
     "# Coase’s Theory of the Firm"
@@ -19,7 +19,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "21648c95",
+   "id": "10b0a607",
    "metadata": {},
    "source": [
     "## Contents\n",
@@ -35,7 +35,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "1fe18a61",
+   "id": "7ea83e3b",
    "metadata": {},
    "source": [
     "In addition to what’s in Anaconda, this lecture will need the following libraries:"
@@ -44,7 +44,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "8aec77ae",
+   "id": "e78d38a8",
    "metadata": {
     "hide-output": false
    },
@@ -55,7 +55,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "190b841c",
+   "id": "b1cfbe8d",
    "metadata": {},
    "source": [
     "## Overview\n",
@@ -86,7 +86,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "44bfb07e",
+   "id": "c6094ccf",
    "metadata": {
     "hide-output": false
    },
@@ -101,7 +101,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "6c265c4a",
+   "id": "a2db36de",
    "metadata": {},
    "source": [
     "### Why Firms Exist\n",
@@ -134,7 +134,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "e9a87737",
+   "id": "22b3e38d",
    "metadata": {},
    "source": [
     "### A Trade-Off\n",
@@ -171,7 +171,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "914baa64",
+   "id": "a929fc9c",
    "metadata": {},
    "source": [
     "### Summary\n",
@@ -185,7 +185,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "9f536423",
+   "id": "c6014121",
    "metadata": {},
    "source": [
     "### A Quantitative Interpretation\n",
@@ -203,7 +203,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "01441f05",
+   "id": "63e41f48",
    "metadata": {},
    "source": [
     "## The Model\n",
@@ -219,7 +219,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "091fabf4",
+   "id": "37bf5b14",
    "metadata": {},
    "source": [
     "### Subcontracting\n",
@@ -262,7 +262,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "30d24661",
+   "id": "e188987d",
    "metadata": {},
    "source": [
     "### Costs\n",
@@ -292,7 +292,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "6d82ee68",
+   "id": "3b9988bd",
    "metadata": {},
    "source": [
     "## Equilibrium\n",
@@ -315,7 +315,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "dc3aae65",
+   "id": "09a8856c",
    "metadata": {},
    "source": [
     "### Informal Definition of Equilibrium\n",
@@ -329,7 +329,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "e48b45fa",
+   "id": "9cfd639a",
    "metadata": {},
    "source": [
     "### Formal Definition of Equilibrium\n",
@@ -387,7 +387,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "d2aaadee",
+   "id": "ce719ecb",
    "metadata": {},
    "source": [
     "## Existence, Uniqueness and Computation of Equilibria\n",
@@ -397,7 +397,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "9bdbb583",
+   "id": "6fc3a6e0",
    "metadata": {},
    "source": [
     "### A Fixed Point Method\n",
@@ -498,7 +498,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "96b730ad",
+   "id": "eb27c080",
    "metadata": {},
    "source": [
     "### Marginal Conditions\n",
@@ -552,7 +552,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "ae795953",
+   "id": "1d4864f8",
    "metadata": {},
    "source": [
     "## Implementation\n",
@@ -577,7 +577,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "890d880d",
+   "id": "7d79214f",
    "metadata": {
     "hide-output": false
    },
@@ -596,7 +596,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "b1d04b0d",
+   "id": "5cab6fcb",
    "metadata": {},
    "source": [
     "Now let’s implement and iterate with $ T $ until convergence.\n",
@@ -608,7 +608,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "6d6aac13",
+   "id": "9ce8313f",
    "metadata": {
     "hide-output": false
    },
@@ -647,7 +647,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "b11eb01c",
+   "id": "2e9d52e0",
    "metadata": {},
    "source": [
     "The next function computes optimal choice of upstream boundary and range of\n",
@@ -657,7 +657,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "5ea2f53a",
+   "id": "b1092254",
    "metadata": {
     "hide-output": false
    },
@@ -684,7 +684,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "291bbce2",
+   "id": "104eed2c",
    "metadata": {},
    "source": [
     "The allocation of firms can be computed by recursively stepping through firms’ choices of\n",
@@ -696,7 +696,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "9f2d074e",
+   "id": "45022da5",
    "metadata": {
     "hide-output": false
    },
@@ -713,7 +713,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "29f07282",
+   "id": "fc8edf8d",
    "metadata": {},
    "source": [
     "Let’s try this at the default parameters.\n",
@@ -725,7 +725,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "73584692",
+   "id": "1180637f",
    "metadata": {
     "hide-output": false
    },
@@ -748,7 +748,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "d1c4e172",
+   "id": "da307910",
    "metadata": {},
    "source": [
     "Here’s the function $ \\ell^* $, which shows how large a firm with\n",
@@ -758,7 +758,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "b42fd0a9",
+   "id": "bb5c13cb",
    "metadata": {
     "hide-output": false
    },
@@ -777,7 +777,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "81f0058b",
+   "id": "d9d5e869",
    "metadata": {},
    "source": [
     "Note that downstream firms choose to be larger, a point we return to below."
@@ -785,7 +785,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "9260be1e",
+   "id": "4cbb19c8",
    "metadata": {},
    "source": [
     "## Exercises\n",
@@ -796,7 +796,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "6645b32d",
+   "id": "e8b7f3f8",
    "metadata": {},
    "source": [
     "## Exercise 5.1\n",
@@ -810,7 +810,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "cfcf3b99",
+   "id": "3b5d98e3",
    "metadata": {},
    "source": [
     "## Solution to[ Exercise 5.1](https://eqm.quantecon.org/#coa_ex1)\n",
@@ -821,7 +821,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "1b234fd4",
+   "id": "78e1ed19",
    "metadata": {
     "hide-output": false
    },
@@ -838,7 +838,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "bdb00789",
+   "id": "836dea46",
    "metadata": {},
    "source": [
     "## Exercise 5.2\n",
@@ -854,7 +854,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "5c400e5c",
+   "id": "6943490e",
    "metadata": {},
    "source": [
     "## Solution to[ Exercise 5.2](https://eqm.quantecon.org/#coa_ex2)\n",
@@ -877,7 +877,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "1c82b5ed",
+   "id": "da5fcc0e",
    "metadata": {
     "hide-output": false
    },
@@ -901,7 +901,7 @@
   }
  ],
  "metadata": {
-  "date": 1706585843.8630867,
+  "date": 1706657885.74896,
   "filename": "coase.md",
   "kernelspec": {
    "display_name": "Python",
