--- a/_notebooks/re_with_feedback.ipynb
+++ b/_notebooks/re_with_feedback.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "e1caa901",
+   "id": "814c252e",
    "metadata": {},
    "source": [
     "\n",
@@ -11,7 +11,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "f576cd85",
+   "id": "0d4e4f29",
    "metadata": {},
    "source": [
     "# Stability in Linear Rational Expectations Models\n",
@@ -22,7 +22,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "dc0a18de",
+   "id": "405a6974",
    "metadata": {},
    "source": [
     "## Contents\n",
@@ -41,7 +41,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "0d10dada",
+   "id": "2a2038e7",
    "metadata": {},
    "source": [
     "In addition to what’s in Anaconda, this lecture deploys the following libraries:"
@@ -50,7 +50,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "747be757",
+   "id": "6d281371",
    "metadata": {
     "hide-output": false
    },
@@ -62,7 +62,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "355caa3d",
+   "id": "4f2827e4",
    "metadata": {
     "hide-output": false
    },
@@ -78,7 +78,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "598affc2",
+   "id": "1b4b5890",
    "metadata": {},
    "source": [
     "## Overview\n",
@@ -106,7 +106,7 @@
     "- how to use **SymPy** to get analytical formulas for some key objects comprising a rational expectations equilibrium  \n",
     "\n",
     "\n",
-    "Matrix decompositions employed here are described in more depth in this lecture [Lagrangian formulations](https://quantecon.github.io/lecture-dle/lagrangian_lqdp.html).\n",
+    "Matrix decompositions employed here are described in more depth in this lecture [Lagrangian formulations](https://dle.quantecon.org/lagrangian_lqdp.html).\n",
     "\n",
     "We formulate a version of  Cagan’s model under  rational expectations\n",
     "as an **expectational difference equation** whose solution is a rational expectations equilibrium.\n",
@@ -117,7 +117,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "73b39505",
+   "id": "15310b15",
    "metadata": {},
    "source": [
     "## Linear Difference Equations\n",
@@ -139,7 +139,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "aa776293",
+   "id": "1d1132a3",
    "metadata": {},
    "source": [
     "### First Order\n",
@@ -232,7 +232,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "4b22e2be",
+   "id": "42b441bc",
    "metadata": {},
    "source": [
     "### Second Order\n",
@@ -277,7 +277,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "fd9367c7",
+   "id": "9b1c7e5b",
    "metadata": {},
    "source": [
     "## Illustration: Cagan’s Model\n",
@@ -381,7 +381,7 @@
     "$ (1 - \\rho_1 z - \\rho_2 z^2) $ are strictly greater than $ 1 $\n",
     "in modulus.\n",
     "\n",
-    "(Please see  [this](https://quantecon.github.io/lecture-dynamics/samuelson.html) QuantEcon lecture for more about characteristic polynomials and their role in solving linear difference equations.)\n",
+    "(Please see  [this](https://dynamics.quantecon.org/samuelson.html) QuantEcon lecture for more about characteristic polynomials and their role in solving linear difference equations.)\n",
     "\n",
     "We seek a stable or non-explosive solution of the difference equation [(11.8)](#equation-equation-1) that\n",
     "obeys the system comprised of [(11.8)](#equation-equation-1)-[(11.11)](#equation-equation-3).\n",
@@ -417,7 +417,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "3d2d4204",
+   "id": "24c1b262",
    "metadata": {},
    "source": [
     "## Some Python Code\n",
@@ -451,7 +451,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "e2de7e60",
+   "id": "2a6f8fcb",
    "metadata": {
     "hide-output": false
    },
@@ -471,7 +471,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "b93e6cda",
+   "id": "3a513ca6",
    "metadata": {},
    "source": [
     "The matrix $ A $ has one eigenvalue equal to unity.\n",
@@ -487,7 +487,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "df0a3390",
+   "id": "049da2ba",
    "metadata": {
     "hide-output": false
    },
@@ -500,7 +500,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "19c38e07",
+   "id": "d13f2278",
    "metadata": {
     "hide-output": false
    },
@@ -511,7 +511,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "361f5755",
+   "id": "54fd5414",
    "metadata": {},
    "source": [
     "Now let’s compute $ F $ in formulas [(11.12)](#equation-equation-4) and [(11.13)](#equation-equation-5)."
@@ -520,7 +520,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "c4c3458b",
+   "id": "0aff5db8",
    "metadata": {
     "hide-output": false
    },
@@ -533,7 +533,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "88e6af25",
+   "id": "5e1efcfc",
    "metadata": {},
    "source": [
     "Now let’s simulate paths of $ m_t $ and $ p_t $ starting from an\n",
@@ -543,7 +543,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "9da72e9e",
+   "id": "519ff7aa",
    "metadata": {
     "hide-output": false
    },
@@ -575,7 +575,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "deb61691",
+   "id": "7608b87c",
    "metadata": {
     "hide-output": false
    },
@@ -592,7 +592,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "2a88107c",
+   "id": "27bdc2e2",
    "metadata": {},
    "source": [
     "In the above graph, why is the log of the price level always less than\n",
@@ -608,7 +608,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "2e6764b0",
+   "id": "a7bc98b6",
    "metadata": {},
    "source": [
     "## Alternative Code\n",
@@ -622,7 +622,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "cf1dfe00",
+   "id": "fce7eef6",
    "metadata": {
     "hide-output": false
    },
@@ -641,7 +641,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "da8cc948",
+   "id": "ffb0a014",
    "metadata": {
     "hide-output": false
    },
@@ -664,7 +664,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "6c938030",
+   "id": "5d6f15e2",
    "metadata": {},
    "source": [
     "### Special Case\n",
@@ -706,7 +706,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "9eaaadec",
+   "id": "064a5b84",
    "metadata": {},
    "source": [
     "## Another Perspective\n",
@@ -863,7 +863,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "168f8f79",
+   "id": "2ff3d8d7",
    "metadata": {},
    "source": [
     "### Refining the Formula\n",
@@ -941,7 +941,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "7a313e8e",
+   "id": "1e27431d",
    "metadata": {},
    "source": [
     "### Remarks about Feedback\n",
@@ -969,7 +969,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "260b27f2",
+   "id": "8e3bff45",
    "metadata": {},
    "source": [
     "## Log money Supply Feeds Back on Log Price Level\n",
@@ -1039,7 +1039,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "d0a620ca",
+   "id": "d79451e3",
    "metadata": {
     "hide-output": false
    },
@@ -1069,7 +1069,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "fc819abc",
+   "id": "31a57f73",
    "metadata": {
     "hide-output": false
    },
@@ -1080,7 +1080,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "bb4b9164",
+   "id": "1aed8b86",
    "metadata": {},
    "source": [
     "Notice that a negative $ \\delta $ will not imperil the stability of the matrix\n",
@@ -1090,7 +1090,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "ef033889",
+   "id": "a80f0136",
    "metadata": {
     "hide-output": false
    },
@@ -1103,7 +1103,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "f323d9ff",
+   "id": "b91f1edc",
    "metadata": {
     "hide-output": false
    },
@@ -1115,7 +1115,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "1b5cf62c",
+   "id": "192523d0",
    "metadata": {},
    "source": [
     "A sufficiently small positive $ \\delta $ also causes no problem."
@@ -1124,7 +1124,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "115bf819",
+   "id": "837ccd7f",
    "metadata": {
     "hide-output": false
    },
@@ -1136,7 +1136,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "791dbe92",
+   "id": "5c8f24b4",
    "metadata": {},
    "source": [
     "But a large enough positive $ \\delta $ makes both eigenvalues of $ H $\n",
@@ -1148,7 +1148,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "915dfcb6",
+   "id": "aca1913a",
    "metadata": {
     "hide-output": false
    },
@@ -1159,7 +1159,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "97200cfe",
+   "id": "823a7aae",
    "metadata": {},
    "source": [
     "We want to study systems in which one eigenvalue exceeds unity in\n",
@@ -1172,7 +1172,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "a70b866c",
+   "id": "8706e28c",
    "metadata": {
     "hide-output": false
    },
@@ -1204,7 +1204,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "735a37fa",
+   "id": "8d77138a",
    "metadata": {},
    "source": [
     "Let’s plot how the solution $ p_0 $ changes as $ m_0 $\n",
@@ -1214,7 +1214,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "58be51b5",
+   "id": "b57445b2",
    "metadata": {
     "hide-output": false
    },
@@ -1233,7 +1233,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "b6738951",
+   "id": "70cace43",
    "metadata": {},
    "source": [
     "To look at things from a different angle, we can fix the initial value $ m_0 $ and\n",
@@ -1243,7 +1243,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "76f4e5e5",
+   "id": "c91efdfb",
    "metadata": {
     "hide-output": false
    },
@@ -1261,7 +1261,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "6146d591",
+   "id": "d973832e",
    "metadata": {},
    "source": [
     "Notice that when $ \\delta $ is large enough, both eigenvalues exceed\n",
@@ -1272,7 +1272,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "a053bfe9",
+   "id": "f61e091c",
    "metadata": {
     "hide-output": false
    },
@@ -1283,7 +1283,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "37ebb4c2",
+   "id": "2d3862c2",
    "metadata": {},
    "source": [
     "## Big $ P $, Little $ p $ Interpretation\n",
@@ -1355,7 +1355,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "d41b5d91",
+   "id": "ad170e9f",
    "metadata": {
     "hide-output": false
    },
@@ -1370,7 +1370,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "155d6084",
+   "id": "cc1074de",
    "metadata": {
     "hide-output": false
    },
@@ -1388,7 +1388,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "b2ef969a",
+   "id": "bc863b2e",
    "metadata": {
     "hide-output": false
    },
@@ -1407,7 +1407,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "8f793932",
+   "id": "06e047ad",
    "metadata": {},
    "source": [
     "Compare $ F^* $ with $ F_1 + F_2 F^* $"
@@ -1416,7 +1416,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "1f1a1983",
+   "id": "e2cf53c5",
    "metadata": {
     "hide-output": false
    },
@@ -1427,7 +1427,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "fb39dda3",
+   "id": "2113f032",
    "metadata": {},
    "source": [
     "## Fun with SymPy\n",
@@ -1444,7 +1444,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "5fc90386",
+   "id": "1d52ea00",
    "metadata": {
     "hide-output": false
    },
@@ -1456,7 +1456,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "7494db89",
+   "id": "948219d7",
    "metadata": {
     "hide-output": false
    },
@@ -1468,7 +1468,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "525d60ef",
+   "id": "9da5c576",
    "metadata": {
     "hide-output": false
    },
@@ -1480,7 +1480,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "f39be564",
+   "id": "2e2c4c2e",
    "metadata": {
     "hide-output": false
    },
@@ -1492,7 +1492,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "5d5411ff",
+   "id": "365ad055",
    "metadata": {
     "hide-output": false
    },
@@ -1503,7 +1503,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "bcc7ecf6",
+   "id": "30045289",
    "metadata": {},
    "source": [
     "Now let’s compute $ H $ when  $ \\delta $ is zero."
@@ -1512,7 +1512,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "fcac61a3",
+   "id": "247e19f4",
    "metadata": {
     "hide-output": false
    },
@@ -1524,7 +1524,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "7a486143",
+   "id": "541d8ff3",
    "metadata": {
     "hide-output": false
    },
@@ -1536,7 +1536,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "42e4d95c",
+   "id": "7bc0aa20",
    "metadata": {
     "hide-output": false
    },
@@ -1548,7 +1548,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "ee337ad2",
+   "id": "0fea9542",
    "metadata": {
     "hide-output": false
    },
@@ -1559,7 +1559,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "e7365e95",
+   "id": "5f88b9fa",
    "metadata": {},
    "source": [
     "Below we do induce SymPy to do the following fun things for us analytically:\n",
@@ -1578,7 +1578,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "1a02a6c8",
+   "id": "921f46a3",
    "metadata": {
     "hide-output": false
    },
@@ -1599,7 +1599,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "c0943b43",
+   "id": "f229e55f",
    "metadata": {
     "hide-output": false
    },
@@ -1610,7 +1610,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "dcfebd98",
+   "id": "20525570",
    "metadata": {},
    "source": [
     "$ Q^{-1} $"
@@ -1619,7 +1619,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "a7499807",
+   "id": "67a22e07",
    "metadata": {
     "hide-output": false
    },
@@ -1631,7 +1631,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "b1784451",
+   "id": "8bb8fb1b",
    "metadata": {},
    "source": [
     "$ Q_{21}Q_{11}^{-1} $"
@@ -1640,7 +1640,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "8d713e40",
+   "id": "248ac199",
    "metadata": {
     "hide-output": false
    },
@@ -1651,7 +1651,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "07482049",
+   "id": "0b8e9c9d",
    "metadata": {},
    "source": [
     "$ −(Q^{22})^{−1}Q^{21} $"
@@ -1660,7 +1660,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "55f4d6d1",
+   "id": "d9f3d10d",
    "metadata": {
     "hide-output": false
    },
@@ -1671,7 +1671,7 @@
   }
  ],
  "metadata": {
-  "date": 1706585844.4578207,
+  "date": 1706657886.2081044,
   "filename": "re_with_feedback.md",
   "kernelspec": {
    "display_name": "Python",
