--- a/_notebooks/uncertainty_traps.ipynb
+++ b/_notebooks/uncertainty_traps.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "69bda0cf",
+   "id": "5136dda3",
    "metadata": {},
    "source": [
     "\n",
@@ -11,7 +11,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "5a21064d",
+   "id": "6d3f629d",
    "metadata": {},
    "source": [
     "# Uncertainty Traps"
@@ -19,7 +19,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "67490979",
+   "id": "7c1f0e67",
    "metadata": {},
    "source": [
     "## Contents\n",
@@ -34,7 +34,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "f3f2d723",
+   "id": "cd7781b6",
    "metadata": {},
    "source": [
     "## Overview\n",
@@ -51,7 +51,7 @@
     "- Greater uncertainty means greater dispersions of these distributions.  \n",
     "- Entrepreneurs are risk-averse and hence less inclined to be active  when uncertainty is high.  \n",
     "- The output of active entrepreneurs is observable, supplying a noisy signal that helps everyone inside the model infer fundamentals.  \n",
-    "- Entrepreneurs update their beliefs about fundamentals using Bayes’ Law, implemented via [Kalman filtering](https://quantecon.github.io/lecture-dle/kalman.html).  \n",
+    "- Entrepreneurs update their beliefs about fundamentals using Bayes’ Law, implemented via [Kalman filtering](https://dle.quantecon.org/kalman.html).  \n",
     "\n",
     "\n",
     "Uncertainty traps emerge because:\n",
@@ -69,7 +69,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "89b0633f",
+   "id": "a1ac56fe",
    "metadata": {
     "hide-output": false
    },
@@ -82,7 +82,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "3a4c52ea",
+   "id": "c075c787",
    "metadata": {},
    "source": [
     "## The Model\n",
@@ -94,7 +94,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "5cfad81d",
+   "id": "e1a06f6b",
    "metadata": {},
    "source": [
     "### Fundamentals\n",
@@ -116,7 +116,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "27316f4c",
+   "id": "81dc978b",
    "metadata": {},
    "source": [
     "### Output\n",
@@ -145,7 +145,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "0ed12519",
+   "id": "6ccca289",
    "metadata": {},
    "source": [
     "### Information and Beliefs\n",
@@ -212,7 +212,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "1824bf0b",
+   "id": "429dd762",
    "metadata": {},
    "source": [
     "### Participation\n",
@@ -274,7 +274,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "e7ced77f",
+   "id": "03961c64",
    "metadata": {},
    "source": [
     "## Implementation\n",
@@ -299,7 +299,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "03989430",
+   "id": "a9f43156",
    "metadata": {
     "hide-output": false
    },
@@ -368,7 +368,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "f2088b15",
+   "id": "bb8c3a61",
    "metadata": {},
    "source": [
     "In the results below we use this code to simulate time series for the major variables."
@@ -376,7 +376,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "27cfd646",
+   "id": "08c521e7",
    "metadata": {},
    "source": [
     "## Results\n",
@@ -412,7 +412,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "cb78b005",
+   "id": "a03b0580",
    "metadata": {},
    "source": [
     "## Exercises"
@@ -420,7 +420,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "12dbeff7",
+   "id": "154181f2",
    "metadata": {},
    "source": [
     "## Exercise 1.1\n",
@@ -449,7 +449,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "d744b568",
+   "id": "d3b4fbce",
    "metadata": {},
    "source": [
     "## Solution to[ Exercise 1.1](https://eqm.quantecon.org/#uncertainty_traps_ex1)\n",
@@ -480,7 +480,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "5e7c566e",
+   "id": "84a638b3",
    "metadata": {},
    "source": [
     "## Exercise 1.2\n",
@@ -492,7 +492,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "b3e8dc3c",
+   "id": "d2bbba1b",
    "metadata": {},
    "source": [
     "## Solution to[ Exercise 1.2](https://eqm.quantecon.org/#uncertainty_traps_ex2)\n",
@@ -515,7 +515,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "71778bcd",
+   "id": "61187076",
    "metadata": {
     "hide-output": false
    },
@@ -540,7 +540,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "02e20b23",
+   "id": "7b0363e5",
    "metadata": {},
    "source": [
     "The points where the curves hit the 45 degree lines are the long-run\n",
@@ -555,7 +555,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "d4699703",
+   "id": "d4e2e88c",
    "metadata": {
     "hide-output": false
    },
@@ -595,7 +595,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "4ef105b0",
+   "id": "d8e79d26",
    "metadata": {},
    "source": [
     "First, let’s see how well $ \\mu $ tracks $ \\theta $ in these\n",
@@ -605,7 +605,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "2c23ac7b",
+   "id": "fc969b58",
    "metadata": {
     "hide-output": false
    },
@@ -621,7 +621,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "1dbe54e1",
+   "id": "6d8e8b94",
    "metadata": {},
    "source": [
     "Now let’s plot the whole thing together"
@@ -630,7 +630,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "fa8329ea",
+   "id": "857ffe54",
    "metadata": {
     "hide-output": false
    },
@@ -660,7 +660,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "c875c17c",
+   "id": "b70546a0",
    "metadata": {},
    "source": [
     "If you run the code above you’ll get different plots, of course.\n",
@@ -675,7 +675,7 @@
   }
  ],
  "metadata": {
-  "date": 1706585844.669251,
+  "date": 1706657886.410133,
   "filename": "uncertainty_traps.md",
   "kernelspec": {
    "display_name": "Python",
